[package]
name = "sust-server"
version = "0.1.0"
authors = ["Connor Roizman", "Jeff Putlock"]
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/connorjayr/sust"
publish = false

[dependencies]
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
base64 = "0.13"
dotenv = "0.15"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
